--- a/public/content/css/style.css
+++ b/public/content/css/style.css
@@ -14,7 +14,7 @@ html { scroll-behavior: smooth; scroll-behavior: auto; overflow-y: auto;	}
 body{ font-family: 'Roboto', sans-serif; font-size: 14px; line-height: 1.62; font-weight: 400; }
 * { outline: none; }
 
-a, .btn{ color: #103D3C; transition: 0.2s all ease-in; -webkit-transition: 0.2s all ease-in; -ms-transition: 0.2s all ease-in; -moz-transition: 0.2s all ease-in; text-decoration: none; }
+a, .btn{ color:var(--button-bg); transition: 0.2s all ease-in; -webkit-transition: 0.2s all ease-in; -ms-transition: 0.2s all ease-in; -moz-transition: 0.2s all ease-in; text-decoration: none; }
 .btn:focus { box-shadow: none; }
 a:hover{ text-decoration: none; }
 img{max-width: 100%; }
@@ -44,7 +44,7 @@ textarea.form-control{padding: 10px 15px; resize: none; height: 80px; border-col
 .scroll-bar-height{ height: calc(100vh - 180px); overflow-y: auto; }
 .scroll-bar-style::-webkit-scrollbar {width: 8px;border-radius:8px}
 .scroll-bar-style::-webkit-scrollbar-track {box-shadow: inset 0 0 6px #B1BFCB;}
-.scroll-bar-style::-webkit-scrollbar-thumb {background-color: #061FAD;/* outline: 1px solid #B1BFCB; */border-radius:8px}
+.scroll-bar-style::-webkit-scrollbar-thumb {background-color:var(--theme-color);/* outline: 1px solid #B1BFCB; */border-radius:8px}
 
 /* Radio Button */
 .custom-radio .radio-group{ display: inline-block; margin-right: 20px; }
@@ -62,8 +62,8 @@ textarea.form-control{padding: 10px 15px; resize: none; height: 80px; border-col
 
 /*white-line*/
 .white-line { border: 1px solid #3A393B; color: #3A393B; padding: 5px 20px; border-radius: 5px; }
-.blue-btn { padding: 5px 20px; border-radius: 5px; background: var(--theme-color); color: var(--white); }
-.blue-btn:hover { color: var(--white); }
+.blue-btn { padding: 5px 20px; border-radius: 5px; background: var(--button-bg); color: var(--button-text-color); }
+.blue-btn:hover { color: var(--button-text-color); }
 
 /*comman-datatable */
 .comman-datatable {  }
