--- a/src/content/css/style.css
+++ b/src/content/css/style.css
@@ -14,7 +14,7 @@ html { scroll-behavior: smooth; scroll-behavior: auto; overflow-y: auto;	}
 body{ font-family: 'Roboto', sans-serif; font-size: 14px; line-height: 1.62; font-weight: 400; }
 * { outline: none; }
 
-a, .btn{ color: #103D3C; transition: 0.2s all ease-in; -webkit-transition: 0.2s all ease-in; -ms-transition: 0.2s all ease-in; -moz-transition: 0.2s all ease-in; text-decoration: none; }
+a, .btn{ color:var(--button-bg); transition: 0.2s all ease-in; -webkit-transition: 0.2s all ease-in; -ms-transition: 0.2s all ease-in; -moz-transition: 0.2s all ease-in; text-decoration: none; }
 .btn:focus { box-shadow: none; }
 a:hover{ text-decoration: none; }
 img{max-width: 100%; }
@@ -39,12 +39,26 @@ textarea.form-control{padding: 10px 15px; resize: none; height: 80px; border-col
 .comman-multiselect .dropdown-menu{ margin: 0; padding: 0; width: 100%; max-height: 200px; overflow-y: auto; }
 .comman-multiselect .dropdown-menu li {  }
 
+/* custom multiselect  comman css */
+.multiselect-dropdown{width:100%;position:relative;}
+.multiselect-dropdown .dropdown-text-view{height: 40px;padding: 0 15px;border: 1px solid #D9D9D9;box-shadow: none;-webkit-box-shadow: none;border-radius: 4px;display: flex;align-items: center;position: relative;    background-image: url(../images/droapdown-icon.svg);background-repeat: no-repeat;background-position: calc(100% - 12px) center;}
+.multiselect-dropdown .dropdown-text-view.disabled{background:#e9ecef}
+.multiselect-dropdown .dropdown-search-select{border: 1px solid #D9D9D9;border-radius:4px;position:absolute;top:100%;left:0;width:100%;z-index:1;background:#ffffff}
+.multiselect-dropdown .dropdown-search-select .search-box{padding:15px 15px 0}
+.multiselect-dropdown .dropdown-search-select .dropdown-chekbox-list{padding:15px;max-height:150px;overflow-y:auto;}
+.multiselect-dropdown .dropdown-search-select .list-dropdown{list-style:none;padding:0;margin:0}
+.multiselect-dropdown .dropdown-search-select .list-dropdown label{margin:0;display:flex;font-weight: normal;color: #212529;align-items:center;cursor:pointer}
+.multiselect-dropdown .dropdown-search-select .list-dropdown label .checkbox-view{margin-right:10px;}
+.multiselect-dropdown .dropdown-search-select .list-dropdown li{margin-bottom:10px}
+.multiselect-dropdown .dropdown-search-select .list-dropdown li:last-child{margin-bottom:0}
+.multiselect-dropdown .dropdown-search-select .list-dropdown label .checkboxe{position: relative;width: 20px;height: 20px;padding: 0;margin: 0;}
+.multiselect-dropdown .dropdown-search-select .list-dropdown label .checkmark{top:0}
 
 /* Custom Scroll Bar */
 .scroll-bar-height{ height: calc(100vh - 180px); overflow-y: auto; }
 .scroll-bar-style::-webkit-scrollbar {width: 8px;border-radius:8px}
 .scroll-bar-style::-webkit-scrollbar-track {box-shadow: inset 0 0 6px #B1BFCB;}
-.scroll-bar-style::-webkit-scrollbar-thumb {background-color: #061FAD;/* outline: 1px solid #B1BFCB; */border-radius:8px}
+.scroll-bar-style::-webkit-scrollbar-thumb {background-color:var(--theme-color);/* outline: 1px solid #B1BFCB; */border-radius:8px}
 
 /* Radio Button */
 .custom-radio .radio-group{ display: inline-block; margin-right: 20px; }
@@ -62,8 +76,8 @@ textarea.form-control{padding: 10px 15px; resize: none; height: 80px; border-col
 
 /*white-line*/
 .white-line { border: 1px solid #3A393B; color: #3A393B; padding: 5px 20px; border-radius: 5px; }
-.blue-btn { padding: 5px 20px; border-radius: 5px; background: var(--theme-color); color: var(--white); }
-.blue-btn:hover { color: var(--white); }
+.blue-btn { padding: 5px 20px; border-radius: 5px; background: var(--button-bg); color: var(--button-text-color); }
+.blue-btn:hover { color: var(--button-text-color); }
 
 /*comman-datatable */
 .comman-datatable {  }
@@ -195,6 +209,7 @@ section.page-wrapper .form-view .file-logo{ border: 1px solid #DCDCDC; padding: 
 section.page-wrapper .custom-panel .panel-body{ display: inline-block; width: 100%;  }
 section.page-wrapper .custom-panel .panel-footer { border-top: 1px solid #C4C4C4; padding: 10px 20px; }
 section.page-wrapper .custom-panel .panel-footer .action-button{ display: flex; justify-content: space-between; }
+section.page-wrapper .custom-panel .panel-footer .action-button .right-list .blue-btn{margin-left:15px}
 
 section.page-wrapper .screen-center { align-items: center;  width: 100%; height: 100%;display: flex; justify-content: center; flex-flow: column; }
 section.page-wrapper .screen-center p{ margin: 10px 0 0; font-size: 18px;  }
